# spca-crm

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
spca_crm/: hooks.py  modules.txt  patches.txt  utils.py  webform_hooks.py
spca_crm/client_scripts/: cruelty_form.js
spca_crm/doctype/cruelty_report/: cruelty_report.js  cruelty_report.py  cruelty_report_list.js  cruelty_report_list.py
spca_crm/doctype/spca_branch/: spca_branch.json
spca_crm/doctype/spca_crm_settings/: spca_crm_settings.py
spca_crm/doctype/web_form_field_mapping/: web_form_field_mapping.json
spca_crm/fixtures/: dashboard_chart_cases_by_priority.json  dashboard_chart_cases_by_status.json  dashboard_chart_monthly_trend.json  notification_cruelty_report.json  number_cards.json  web_form_public_cruelty_report.json  workflow_action_master_cruelty_report.json  workflow_cruelty_report.json  workflow_state_cruelty_report.json  workspace_spca_crm.json
spca_crm/report/cases_by_region/: cases_by_region.json
spca_crm/report/sla_performance/: sla_performance.py
spca_crm/setup/: install.py
spca_crm/spca_crm/doctype/animal_involved/: animal_involved.json  animal_involved.py
spca_crm/spca_crm/doctype/case_note/: case_note.json  case_note.py
spca_crm/spca_crm/doctype/case_suspect/: case_suspect.json  case_suspect.py
spca_crm/spca_crm/doctype/case_witness/: case_witness.json  case_witness.py
spca_crm/spca_crm/doctype/complainant/: complainant.json  complainant.py
spca_crm/tests/: test_cruelty_report.py
(+16 files in other folders)
