[project]
name = "spca_crm"
authors = [
    { name = "SPCA Digital Team", email = "dev@spca.org.za" }
]
description = "ERPNext CRM module for SPCA cruelty report management, inspections and case workflow."
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "frappe>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "responses>=0.23.0",
]

[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "spca_crm"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99
